@@ -1,4 +1,4 @@
- $Id: ChangeLog,v 1.131.2.25.2.87 2010/09/20 08:50:26 uehira Exp $
+ $Id: ChangeLog,v 1.131.2.25.2.88 2010/09/20 10:25:44 uehira Exp $
 
 2010-09-20  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/extraw.c : 64 bit clean.
@@ -14,6 +14,8 @@
 	* adj_sec() moved to 'src/winlib.c'.
 	  src/final2finalb.c, src/pick2finalb.c
 	  win.c : adj_sec() --> adj_sec_win()
+	* read_param() ---> read_param_line() [src/winlib.c]
+	  src/evdetect.c, src/events.c, src/pmon.c, src/setexb.c, src/wtape.c
 
 2010-09-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* src/send_raw.c : 64 bit clean?
